changement de caroussel, adaptabilité sur le css

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -22,4 +22,8 @@
     font-size: 3.5rem;
     padding-bottom: 1rem;
   }
+  &__undertitle {
+    font-family: v.$ffRaleway;
+    font-size: larger;
+  }
 }
