--- a/src/components/Header/Menu/style.scss
+++ b/src/components/Header/Menu/style.scss
@@ -1,10 +1,30 @@
+@use "src/styles/vars" as v;
+
 .nav-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-top: 1rem;
-  &__lien:active {
-    position: relative;
-    top: 1px;
+  &__lien {
+    font-family: v.$ffRaleway;
   }
 }
+/*Effet de soulignement */
+// Link {
+//   position: relative;
+//   display: inline;
+//   &::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     width: 100%;
+//     height: 10%;
+//     margin: 0 auto;
+//     background: v.$bgColor;
+//     transform: scale(0);
+//     transition: transform 0.2s ease-in-out;
+//   }
+//   &:hover::after {
+//     transform: scale(1);
+//   }
+// }
