ajout de logo svg pour les langages

--- a/src/components/Body/Carousel/style.scss
+++ b/src/components/Body/Carousel/style.scss
@@ -1,20 +1,14 @@
 @use "src/styles/vars" as v;
 .caroussel {
-  position: relative;
   width: 100%;
-  // min-height: ;
   margin: 0 auto;
   padding-bottom: 2rem;
-
-  &__self {
+  &__div {
     width: 100%;
   }
-}
-.react-3d-caroussel {
-  padding: 2rem;
-}
-.imgs {
-  border-radius: 20px;
-  height: 100%;
-  width: 100%;
+  &__imgs {
+    border-radius: 20px;
+    height: 100%;
+    width: 100%;
+  }
 }
