--- a/src/components/Body/Apotheose/style.scss
+++ b/src/components/Body/Apotheose/style.scss
@@ -4,13 +4,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   &__title {
     margin: 2rem;
     padding: 1rem;
     font-size: large;
+    width: 100%;
+    text-align: center;
   }
   &__video {
-    display: block;
     border-radius: 20px;
+    width: 100%;
+    max-width: 853px;
   }
 }
